tester/testsuite/bad/bad056.jl
int main() {
    // Modulo operator on doubles
    double x;
    double y;
    printDouble(x%y);

    return 0;
}
